--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Create.cshtml
@@ -1,5 +1,8 @@
 ﻿    <div class="col-md-12 m-top20">
-            <h4 class="inline-b">Create User</h4>
+        <h3 class="inline-b">
+            Create User
+        </h3>
+            
     </div>
     <div id="CreateUser" tabindex="-1" aria-hidden="true" data-bind="with:selectedUser">
     <div class="col-lg-12 pad0 padB0">
