--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
@@ -37,7 +37,7 @@
             <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
                 <thead class="bg-grey">
                     <tr>
-                        <th class="text-center">Contact No </th>
+                        <th class="text-center">Id </th>
                         <th class="text-center">Name </th>
                         <th class="text-center">Title</th>
                         @*<th class="text-center">Related To</th>*@
