--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
@@ -48,7 +48,7 @@
                 <table class="table table-striped table-bordered table-responsive table-hover dt-responsive" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
                     <thead class="bg-grey">
                         <tr>
-                            <th class="text-center">User Id </th>
+                            <th class="text-center">Id </th>
                             <th class="text-center">Name </th>
                             <th class="text-center">Company</th>
                             <th class="text-center">Phone</th>
