--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Index.cshtml
@@ -36,7 +36,7 @@
             <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
                 <thead class="bg-grey">
                     <tr>
-                        <th class="text-center">Potential No</th>
+                        <th class="text-center">Id</th>
                         <th class="text-center">Potential Name</th>
                         <th class="text-center">Related To</th>
                         <th class="text-center">Sales Stage</th>
