--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Details.cshtml
@@ -30,14 +30,10 @@
             <div class="form-group">
                 <label class="lblwidth">Address</label><span data-bind="text:selectedUser().address"></span>
             </div>
-            <div class="form-group m-l-md">
-                <label class="checkbox-inline i-checks">
-                    <input type="checkbox" data-bind="checked:selectedUser().islistingmember" disabled="disabled">
-                    <i></i>Listing Member
-                </label>
-
-                @*<input type="checkbox" data-bind="checked:selectedUser().islistingmember"/><label> Listing Member</label>*@
+            <div class="form-group">
+                <label class="lblwidth">Listing Member</label><span data-bind="text:selectedUser().islistingmemberdetail"></span>
             </div>
+     
 
         </div>
     </div>
