SignIn and forgot passwords pages, design issues solved.

--- a/Source/CRMLite.UI/Content/css/login.css
+++ b/Source/CRMLite.UI/Content/css/login.css
@@ -1,212 +1,194 @@
-<<<<<<< HEAD
-*{
-  -ms-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  border: 0;
+ HEAD * {
+ -ms-box-sizing: border-box;
+ -moz-box-sizing: border-box;
+ -webkit-box-sizing: border-box;
+ box-sizing: border-box;
+ margin: 0;
+ padding: 0;
+ border: 0;
 }
 .input {
-    width:60%;
-	  margin-top: 14px;
-    padding:5px 15px 7px 35px;
-   
-	background:#fff !important;
-    border:1px solid #c6d2db;
-    border-top:1px solid #b4c1cb;
-    box-shadow:inset 0 1px 2px rgba(0,0,0,0.08);
-   float:left;
-   border-radius: 20px;
-    background:#e8edf1;
+	width: 60%;
+	margin-top: 14px;
+	padding: 5px 15px 7px 35px;
+	background: #fff !important;
+	border: 1px solid #c6d2db;
+	border-top: 1px solid #b4c1cb;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,0.08);
+	float: left;
+	border-radius: 20px;
+	background: #e8edf1;
 }
-
-    div.input.focus {
-        border:1px solid #9ecbe2;
-        box-shadow:0 0 6px #abdcff, inset 0 1px 2px rgba(0,0,0,0.08);
-    }
-
+div.input.focus {
+	border: 1px solid #9ecbe2;
+	box-shadow: 0 0 6px #abdcff, inset 0 1px 2px rgba(0,0,0,0.08);
+}
 input#s {
-    width:100%;
-    border:0;
-    border-radius:20px;
-    background:transparent;
-    height:20px;
-    color:#b4bdc4;
-    text-shadow:0 1px 1px #fff;
+	width: 100%;
+	border: 0;
+	border-radius: 20px;
+	background: transparent;
+	height: 20px;
+	color: #b4bdc4;
+	text-shadow: 0 1px 1px #fff;
 }
-
-    input#s:focus {
-        outline:none
-    }
-
+input#s:focus {
+	outline: none
+}
 input#searchSubmit {
-    width:19px;
-    height:19px;
-    text-indent:-9999px;
-    overflow:hidden;
-	  content: "\f002";
-	  font-size:24px;
-	  font-family:'FontAwesome';
-	  color:#000;
-   background:url(../images/search.png) no-repeat;
-    border:0;
-    position:absolute;
-    top:20px; left:10px;
-    z-index:5;
-    display:block;
-    cursor:pointer;
-	  transform: rotate(90deg);
+	width: 19px;
+	height: 19px;
+	text-indent: -9999px;
+	overflow: hidden;
+	content: "\f002";
+	font-size: 24px;
+	font-family: 'FontAwesome';
+	color: #000;
+	background: url(../images/search.png) no-repeat;
+	border: 0;
+	position: absolute;
+	top: 20px;
+	left: 10px;
+	z-index: 5;
+	display: block;
+	cursor: pointer;
+	transform: rotate(90deg);
 }
 .fieldset {
 	width: 100%;
-  margin: 0px;
-  padding: 0px;
-  border: none;
+	margin: 0px;
+	padding: 0px;
+	border: none;
 }
-.login{
- position: relative;
-  top: 25%;
-  width: 30%;
-  display: table;
-  margin: 0px auto 0 auto;
-  background: #fff;
-  border-radius: 4px;
-  border: none;
+.login {
+	position: relative;
+	top: 25%;
+	width: 30%;
+	display: table;
+	margin: 0px auto 0 auto;
+	background: #fff;
+	border-radius: 4px;
+	border: none;
 }
-
-.legend{
- position: relative;
-  width: 100%;
-  display: block;
-  background: #2ecc71;
-  padding: 15px 0;
-  color: #fff;
-  text-align:center;
-  font-size: 24px;
-  text-transform:uppercase;
-  font-weight:600;
+.legend {
+	position: relative;
+	width: 100%;
+	display: block;
+	background: #2ecc71;
+	padding: 15px 0;
+	color: #fff;
+	text-align: center;
+	font-size: 24px;
+	text-transform: uppercase;
+	font-weight: 600;
 }
-.legend:after{
-    content: "";
-    background-image: url(../images/multy-user.png);
-    background-size: 100px 100px;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    opacity: 0.06;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-  }
-
-
-.input{
-  position: relative;
-  width: 90%;
- margin:10px 5%;
- display:block;
-  border-radius:30px;
-      z-index: 99999999;
+.legend:after {
+	content: "";
+	background-image: url(../images/multy-user.png);
+	background-size: 100px 100px;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	opacity: 0.06;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	position: absolute;
 }
-  span{
-    position: absolute;
-    display: block;
-    color: darken(#EDEDED, 10%);
-    left: 20px;
-    top: 8px;
-    font-size: 20px;
-  }
-  
-  input{
-    width: 100%;
-    padding: 5px 5px 5px 20px;
-    display: block;
-    font-size:16px;
-    border-radius: 4px;
-    transition: 0.2s ease-out;
-    border:none;
-    color: darken(#EDEDED, 30%);
-  }
-     input:focus{
-      padding: 5px 5px 5px 10px;
-      outline: 0;
-      border-color: #FF7052;
-    }
-
-
-.submit{
-  width: 45px;
-  height: 45px;
-  display: block;
-  margin: 0 auto -30px auto;
-  background: #fff;
-  border-radius: 100%;
-  border: 1px solid #2ecc71;
-  color: #1aae88;
-  font-size: 24px;
-  cursor: pointer;
-  box-shadow: 0px 0px 0px 7px #fff;
-  transition: 0.2s ease-out;
+.input {
+	position: relative;
+	width: 90%;
+	margin: 10px 5%;
+	display: block;
+	border-radius: 30px;
+	z-index: 99999999;
 }
-.submit:hover, .submit:focus{
-    background: #2ecc71;
-    color: #fff;
-    outline: 0;
-  }
-
-
-.feedback{
-  position: absolute;
-  bottom: -70px;
-  width: 100%;
-  text-align: center !important;
-  color: #fff !important;
-  background: #2ecc71;
-  padding: 10px 0;
-  font-size: 12px;
-  display: none;
-  border-radius:3px;
-  opacity: 0;
-  
-  &:before{
-    bottom: 100%;
-    left: 50%;
-    border: solid transparent;
-    content: "";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-color: rgba(46, 204, 113, 0);
-    border-bottom-color: #2ecc71;
-    border-width: 10px;
-    margin-left: -10px;
-    
-  }
+span {
+	position: absolute;
+	display: block;
+	color: darken(#EDEDED, 10%);
+	left: 20px;
+	top: 8px;
+	font-size: 20px;
 }
-
+input {
+	width: 100%;
+	padding: 5px 5px 5px 20px;
+	display: block;
+	font-size: 16px;
+	border-radius: 4px;
+	transition: 0.2s ease-out;
+	border: none;
+	color: darken(#EDEDED, 30%);
+}
+input:focus {
+	padding: 5px 5px 5px 10px;
+	outline: 0;
+	border-color: #FF7052;
+}
+.submit {
+	width: 45px;
+	height: 45px;
+	display: block;
+	margin: 0 auto -30px auto;
+	background: #fff;
+	border-radius: 100%;
+	border: 1px solid #2ecc71;
+	color: #1aae88;
+	font-size: 24px;
+	cursor: pointer;
+	box-shadow: 0px 0px 0px 7px #fff;
+	transition: 0.2s ease-out;
+}
+.submit:hover, .submit:focus {
+	background: #2ecc71;
+	color: #fff;
+	outline: 0;
+}
+.feedback {
+	position: absolute;
+	bottom: -70px;
+	width: 100%;
+	text-align: center !important;
+	color: #fff !important;
+	background: #2ecc71;
+	padding: 10px 0;
+	font-size: 12px;
+	display: none;
+	border-radius: 3px;
+	opacity: 0;
+ &:before {
+ bottom: 100%;
+ left: 50%;
+ border: solid transparent;
+ content: "";
+ height: 0;
+ width: 0;
+ position: absolute;
+ pointer-events: none;
+ border-color: rgba(46, 204, 113, 0);
+ border-bottom-color: #2ecc71;
+ border-width: 10px;
+ margin-left: -10px;
+}
+}
 .bottom {
-  position: absolute;
-  bottom: 10px;
-  color: #fff;
-  width: 100%;
-  text-align: center;
-  font-size: 14px;
+	position: absolute;
+	bottom: 10px;
+	color: #fff;
+	width: 100%;
+	text-align: center;
+	font-size: 14px;
 }
 .login h3 {
-
-    font-size:14px;
-    padding:8px;
-    text-align:justify;
-    line-height:18px;
+	font-size: 14px;
+	padding: 8px;
+	text-align: justify;
+	line-height: 18px;
 }
 .login-form-header-title {
-
-    font-size:24px !important;
-    text-align:center !important;
+	font-size: 24px !important;
+	text-align: center !important;
 }
 .large-header {
 	position: relative;
@@ -217,24 +199,19 @@ input#searchSubmit {
 	background-position: center center;
 	z-index: 1;
 }
-
 .demo-1 .large-header {
 	background-image: url('../images/demo-1-bg.jpg');
 }
-
 .demo-2 .large-header {
 	background-image: url('../images/demo-2-bg.jpg');
 	background-position: center bottom;
 }
-
 .demo-3 .large-header {
 	background: #7f8c8d;
 }
-
 .demo-4 .large-header {
 	background: #f9f1e9;
 }
-
 .main-title {
 	position: absolute;
 	margin: 0;
@@ -243,17 +220,14 @@ input#searchSubmit {
 	text-align: center;
 	top: 50%;
 	left: 50%;
-	-webkit-transform: translate3d(-50%,-50%,0);
-	transform: translate3d(-50%,-50%,0);
+	-webkit-transform: translate3d(-50%, -50%, 0);
+	transform: translate3d(-50%, -50%, 0);
 }
-
-.demo-1 .main-title, 
-.demo-3 .main-title {
+.demo-1 .main-title, .demo-3 .main-title {
 	text-transform: uppercase;
 	font-size: 4.2em;
 	letter-spacing: 0.1em;
 }
-
 .demo-2 .main-title {
 	font-family: 'Clicker Script', cursive;
 	font-weight: normal;
@@ -261,7 +235,6 @@ input#searchSubmit {
 	padding-left: 10px;
 	text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
 }
-
 .demo-2 .main-title::before {
 	content: '';
 	width: 20vw;
@@ -275,17 +248,15 @@ input#searchSubmit {
 	left: 50%;
 	border-radius: 50%;
 	z-index: -1;
-	-webkit-transform: translate3d(-50%,-50%,0);
-	transform: translate3d(-50%,-50%,0);
+	-webkit-transform: translate3d(-50%, -50%, 0);
+	transform: translate3d(-50%, -50%, 0);
 }
-
 .demo-3 .main-title {
 	padding: 10px 40px;
 	border: 10px double #f9f1e9;
 	text-transform: uppercase;
 	font-family: Londrina Outline, sans-serif;
 }
-
 .demo-4 .main-title {
 	font-size: 6em;
 	font-weight: 300;
@@ -293,222 +264,202 @@ input#searchSubmit {
 	text-transform: uppercase;
 	color: #222;
 }
-
 .main-title .thin {
 	font-weight: 200;
 }
-.validation-summary-errors{
-    font-size:13px;
-    font-weight:600;
-    color:red;
-    text-align:center;
-    padding:10px;
-
+.validation-summary-errors {
+	font-size: 13px;
+	font-weight: 600;
+	color: red;
+	text-align: center;
+	padding: 10px;
 }
 
 @media only screen and (max-width : 768px) {
-	.demo-1 .main-title, 
-	.demo-3 .main-title,
-	.demo-4 .main-title {
-		font-size: 3em;
-	}
-     .login{
-        width:70%;
-    }
-
-	.demo-2 .main-title {
-		font-size: 4em;
-	}
+.demo-1 .main-title,  .demo-3 .main-title,  .demo-4 .main-title {
+	font-size: 3em;
 }
+.login {
+	width: 70%;
+}
+.demo-2 .main-title {
+	font-size: 4em;
+}
+}
+
 @media only screen and (max-width : 767px) {
-
-    .login{
-        width:80%;
-    }
-    .large-header {
-  position: relative;
-  width: 100%;
-  background: #333;
-  overflow-y: auto;
-  background-size: cover;
-  /* background-position: center center; */
+.login {
+	width: 80%;
+}
+.large-header {
+	position: relative;
+	width: 100%;
+	background: #333;
+	overflow-y: auto;
+	background-size: cover;
+	/* background-position: center center; */
   /* z-index: 1; */
-  overflow-x: hidden;
+	overflow-x: hidden;
 }
-    .input {
-        margin-left:0%;
-        margin-right:0%;
-    }
-    .bottom{
-        display:none;
-    }
+.input {
+	margin-left: 0%;
+	margin-right: 0%;
 }
-@media only screen and (min-width : 320px) and (max-width : 470px){
-    .login{
-        width:95%;
-    }
-    .input {
-        margin-left:0% !important;
-        margin-right:0% !important;
-    }
-=======
-*{
-  -ms-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  border: 0;
+.bottom {
+	display: none;
+}
 }
 
-
+@media only screen and (min-width : 320px) and (max-width : 470px) {
+.login {
+	width: 95%;
+}
+.input {
+	margin-left: 0% !important;
+	margin-right: 0% !important;
+}
+======= * {
+ -ms-box-sizing: border-box;
+ -moz-box-sizing: border-box;
+ -webkit-box-sizing: border-box;
+ box-sizing: border-box;
+ margin: 0;
+ padding: 0;
+ border: 0;
+}
 .fieldset {
 	width: 100%;
-  margin: 0px;
-  padding: 0px;
-  border: none;
+	margin: 0px;
+	padding: 0px;
+	border: none;
 }
-.login{
- position: relative;
-  top: 25%;
-  width: 30%;
-  display: table;
-  margin: 0px auto 0 auto;
-  background: #fff;
-  border-radius: 4px;
-  border: none;
+.login {
+	position: relative;
+	top: 25%;
+	width: 30%;
+	display: table;
+	margin: 0px auto 0 auto;
+	background: #fff;
+	border-radius: 4px;
+	border: none;
 }
-
-.legend{
- position: relative;
-  width: 100%;
-  display: block;
-  background: #2ecc71;
-  padding: 15px 0;
-  color: #fff;
-  text-align:center;
-  font-size: 24px;
-  text-transform:uppercase;
-  font-weight:600;
+.legend {
+	position: relative;
+	width: 100%;
+	display: block;
+	background: #2ecc71;
+	padding: 15px 0;
+	color: #fff;
+	text-align: center;
+	font-size: 24px;
+	text-transform: uppercase;
+	font-weight: 600;
 }
-.legend:after{
-    content: "";
-    background-image: url(../images/multy-user.png);
-    background-size: 100px 100px;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    opacity: 0.06;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-  }
-
-
-.input{
-  position: relative;
-  width: 90%;
- margin:10px 5%;
- display:block;
-  border-radius:30px;
+.legend:after {
+	content: "";
+	background-image: url(../images/multy-user.png);
+	background-size: 100px 100px;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	opacity: 0.06;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	position: absolute;
 }
-  span{
-    position: absolute;
-    display: block;
-    color: darken(#EDEDED, 10%);
-    left: 20px;
-    top: 8px;
-    font-size: 20px;
-  }
-  
-  input{
-    width: 100%;
-    padding: 5px 5px 5px 20px;
-    display: block;
-    font-size:16px;
-    border-radius: 4px;
-    transition: 0.2s ease-out;
-    color: darken(#EDEDED, 30%);
-  }
-     input:focus{
-      padding: 5px 5px 5px 10px;
-      outline: 0;
-      border-color: #FF7052;
-    }
-
-
-.submit{
-  width: 45px;
-  height: 45px;
-  display: block;
-  margin: 0 auto -30px auto;
-  background: #fff;
-  border-radius: 100%;
-  border: 1px solid #2ecc71;
-  color: #1aae88;
-  font-size: 24px;
-  cursor: pointer;
-  box-shadow: 0px 0px 0px 7px #fff;
-  transition: 0.2s ease-out;
+.input {
+	position: relative;
+	width: 90%;
+	margin: 10px 5%;
+	display: block;
+	border-radius: 30px;
 }
-.submit:hover, .submit:focus{
-    background: #2ecc71;
-    color: #fff;
-    outline: 0;
-  }
-
-
-.feedback{
-  position: absolute;
-  bottom: -70px;
-  width: 100%;
-  text-align: center;
-  color: #fff;
-  background: #2ecc71;
-  padding: 10px 0;
-  font-size: 12px;
-  display: none;
-  border-radius:3px;
-  opacity: 0;
-  
-  &:before{
-    bottom: 100%;
-    left: 50%;
-    border: solid transparent;
-    content: "";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-color: rgba(46, 204, 113, 0);
-    border-bottom-color: #2ecc71;
-    border-width: 10px;
-    margin-left: -10px;
-    
-  }
+span {
+	position: absolute;
+	display: block;
+	color: darken(#EDEDED, 10%);
+	left: 20px;
+	top: 8px;
+	font-size: 20px;
 }
-
+input {
+	width: 100%;
+	padding: 5px 5px 5px 20px;
+	display: block;
+	font-size: 16px;
+	border-radius: 4px;
+	transition: 0.2s ease-out;
+	color: darken(#EDEDED, 30%);
+}
+input:focus {
+	padding: 5px 5px 5px 10px;
+	outline: 0;
+	border-color: #FF7052;
+}
+.submit {
+	width: 45px;
+	height: 45px;
+	display: block;
+	margin: 0 auto -30px auto;
+	background: #fff;
+	border-radius: 100%;
+	border: 1px solid #2ecc71;
+	color: #1aae88;
+	font-size: 24px;
+	cursor: pointer;
+	box-shadow: 0px 0px 0px 7px #fff;
+	transition: 0.2s ease-out;
+}
+.submit:hover, .submit:focus {
+	background: #2ecc71;
+	color: #fff;
+	outline: 0;
+}
+.feedback {
+	position: absolute;
+	bottom: -70px;
+	width: 100%;
+	text-align: center;
+	color: #fff;
+	background: #2ecc71;
+	padding: 10px 0;
+	font-size: 12px;
+	display: none;
+	border-radius: 3px;
+	opacity: 0;
+ &:before {
+ bottom: 100%;
+ left: 50%;
+ border: solid transparent;
+ content: "";
+ height: 0;
+ width: 0;
+ position: absolute;
+ pointer-events: none;
+ border-color: rgba(46, 204, 113, 0);
+ border-bottom-color: #2ecc71;
+ border-width: 10px;
+ margin-left: -10px;
+}
+}
 .bottom {
-  position: absolute;
-  bottom: 10px;
-  color: #fff;
-  width: 100%;
-  text-align: center;
-  font-size: 14px;
+	position: absolute;
+	bottom: 10px;
+	color: #fff;
+	width: 100%;
+	text-align: center;
+	font-size: 14px;
 }
 .login h3 {
-
-    font-size:14px;
-    padding:8px;
-    text-align:justify;
-    line-height:18px;
+	font-size: 14px;
+	padding: 8px;
+	text-align: justify;
+	line-height: 18px;
 }
 .login-form-header-title {
-
-    font-size:24px !important;
-    text-align:center !important;
+	font-size: 24px !important;
+	text-align: center !important;
 }
 .large-header {
 	position: relative;
@@ -519,24 +470,19 @@ input#searchSubmit {
 	background-position: center center;
 	z-index: 1;
 }
-
 .demo-1 .large-header {
 	background-image: url('../images/demo-1-bg.jpg');
 }
-
 .demo-2 .large-header {
 	background-image: url('../images/demo-2-bg.jpg');
 	background-position: center bottom;
 }
-
 .demo-3 .large-header {
 	background: #7f8c8d;
 }
-
 .demo-4 .large-header {
 	background: #f9f1e9;
 }
-
 .main-title {
 	position: absolute;
 	margin: 0;
@@ -545,17 +491,14 @@ input#searchSubmit {
 	text-align: center;
 	top: 50%;
 	left: 50%;
-	-webkit-transform: translate3d(-50%,-50%,0);
-	transform: translate3d(-50%,-50%,0);
+	-webkit-transform: translate3d(-50%, -50%, 0);
+	transform: translate3d(-50%, -50%, 0);
 }
-
-.demo-1 .main-title, 
-.demo-3 .main-title {
+.demo-1 .main-title, .demo-3 .main-title {
 	text-transform: uppercase;
 	font-size: 4.2em;
 	letter-spacing: 0.1em;
 }
-
 .demo-2 .main-title {
 	font-family: 'Clicker Script', cursive;
 	font-weight: normal;
@@ -563,7 +506,6 @@ input#searchSubmit {
 	padding-left: 10px;
 	text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
 }
-
 .demo-2 .main-title::before {
 	content: '';
 	width: 20vw;
@@ -577,17 +519,15 @@ input#searchSubmit {
 	left: 50%;
 	border-radius: 50%;
 	z-index: -1;
-	-webkit-transform: translate3d(-50%,-50%,0);
-	transform: translate3d(-50%,-50%,0);
+	-webkit-transform: translate3d(-50%, -50%, 0);
+	transform: translate3d(-50%, -50%, 0);
 }
-
 .demo-3 .main-title {
 	padding: 10px 40px;
 	border: 10px double #f9f1e9;
 	text-transform: uppercase;
 	font-family: Londrina Outline, sans-serif;
 }
-
 .demo-4 .main-title {
 	font-size: 6em;
 	font-weight: 300;
@@ -595,63 +535,58 @@ input#searchSubmit {
 	text-transform: uppercase;
 	color: #222;
 }
-
 .main-title .thin {
 	font-weight: 200;
 }
-.validation-summary-errors{
-    font-size:13px;
-    font-weight:600;
-    color:red;
-    text-align:center;
-    padding:10px;
-
+.validation-summary-errors {
+	font-size: 13px;
+	font-weight: 600;
+	color: red;
+	text-align: center;
+	padding: 10px;
 }
 
 @media only screen and (max-width : 768px) {
-	.demo-1 .main-title, 
-	.demo-3 .main-title,
-	.demo-4 .main-title {
-		font-size: 3em;
-	}
-     .login{
-        width:70%;
-    }
-
-	.demo-2 .main-title {
-		font-size: 4em;
-	}
+.demo-1 .main-title,  .demo-3 .main-title,  .demo-4 .main-title {
+	font-size: 3em;
 }
+.login {
+	width: 70%;
+}
+.demo-2 .main-title {
+	font-size: 4em;
+}
+}
+
 @media only screen and (max-width : 767px) {
-
-    .login{
-        width:80%;
-    }
-    .large-header {
-  position: relative;
-  width: 100%;
-  background: #333;
-  overflow-y: auto;
-  background-size: cover;
-  /* background-position: center center; */
+.login {
+	width: 80%;
+}
+.large-header {
+	position: relative;
+	width: 100%;
+	background: #333;
+	overflow-y: auto;
+	background-size: cover;
+	/* background-position: center center; */
   /* z-index: 1; */
-  overflow-x: hidden;
+	overflow-x: hidden;
 }
-    .input {
-        margin-left:0%;
-        margin-right:0%;
-    }
-    .bottom{
-        display:none;
-    }
+.input {
+	margin-left: 0%;
+	margin-right: 0%;
 }
-@media only screen and (min-width : 320px) and (max-width : 470px){
-    .login{
-        width:95%;
-    }
-    .input {
-        margin-left:0% !important;
-        margin-right:0% !important;
-    }
->>>>>>> 232f8df5535e3a86d0ec983d37dad74f160b37d5
+.bottom {
+	display: none;
+}
+}
+@media only screen and (min-width : 320px) and (max-width : 470px) {
+.login {
+	width: 95%;
+}
+.input {
+	margin-left: 0% !important;
+	margin-right: 0% !important;
+}
+
 }
