--- a/Source/CRMLite.UI/Views/User/ForgotPassword.cshtml
+++ b/Source/CRMLite.UI/Views/User/ForgotPassword.cshtml
@@ -19,13 +19,13 @@
                 @*@Html.ValidationMessageFor(model =>model.Email)*@
             </div>
 
-
+            <div class="clearfix"></div>
                 <button type="submit" class="submit"><i class="fa fa-long-arrow-right"></i></button>
                 @*<input type="submit" class="btn btn-primary top-mar " value="Recover" />
                     <div class="validation-summary-errors" style="background:white;">@ViewBag.Message</div>*@
            <div class="feedback"></div>
 
-            <a href="/User/SignIn" class="pull-right" style="color: #fff; padding-top: 7px;">Back To Login</a>
+            <a href="/User/SignIn" class="pull-right f-t-b">Back To Login</a>
         }
     </div>
 </div>
