--- a/Source/CRMLite.UI/Content/css/style-responsive.css
+++ b/Source/CRMLite.UI/Content/css/style-responsive.css
@@ -1,414 +1,352 @@
+
 @media (min-width: 2001px) and (max-width: 6000px) {
-    .auto-height {
-        height: 100% !important ;
-    }
+.auto-height {
+	height: 100% !important;
+}
 }
 
 @media (min-width: 1500px) and (max-width: 2000px) {
-    .auto-height {
-        height: 690px ;
-    }
+.auto-height {
+	height: 690px;
+}
 }
 
 @media (min-width: 1025px) and (max-width: 1200px) {
-    .auto-height {
-        height: 500px;
-    }
+.auto-height {
+	height: 500px;
 }
+}
+
 @media (min-width: 768px) and (max-width: 1024px) {
+.inbox-wrapper .inbox-left {
+	width: 30%;
+}
+.auto-height {
+	height: 100%;
+	padding-bottom: 30px;
+}
+.inbox-wrapper .inbox-right {
+	width: 70%;
+}
+.form-control {
+	margin-bottom: 10px;
+}
+}
 
-    .inbox-wrapper .inbox-left {
-        width: 30%;
-    }
-    .auto-height {
-    height: 100%;
-    
-    padding-bottom: 30px;
-}
-
-    .inbox-wrapper .inbox-right {
-        width: 70%;
-    }
-    .form-control {
-    margin-bottom: 10px;
-}
-}
 @media (min-width: 768px) and (max-width: 1000px) {
-    .f-width{
-        width: 100%;
-        margin-bottom:10px;
-    }
-    .m-r  {
-      
-        margin-bottom:10px !important;
-    }
+.f-width {
+	width: 100%;
+	margin-bottom: 10px;
+}
+.m-r {
+	margin-bottom: 10px !important;
+}
 }
 
 @media (max-width: 768px) {
+.header {
+	position: absolute;
+}
+/*sidebar*/
 
-    .header {
-        position: absolute;
-    }
+#sidebar {
+	height: auto;
+	overflow: hidden;
+	position: absolute;
+	width: 100%;
+	z-index: 1001;
+}
+/* body container */
+#main-content {
+	margin: 0px!important;
+	position: none !important;
+}
+#sidebar > ul > li > a > span {
+	line-height: 35px;
+}
+#sidebar > ul > li {
+	margin: 0 10px 5px 10px;
+}
+#sidebar > ul > li > a {
+	height: 35px;
+	line-height: 35px;
+	padding: 0 10px;
+	text-align: left;
+}
+#sidebar > ul > li > a i {
+/*display: none !important;*/
+}
+.mail-info, .mail-info:hover {
+	display: none !important;
+}
+#sidebar ul > li > a .arrow, #sidebar > ul > li > a .arrow.open {
+	margin-right: 10px;
+	margin-top: 15px;
+}
+#sidebar ul > li.active > a .arrow, #sidebar ul > li > a:hover .arrow, #sidebar ul > li > a:focus .arrow,  #sidebar > ul > li.active > a .arrow.open, #sidebar > ul > li > a:hover .arrow.open, #sidebar > ul > li > a:focus .arrow.open {
+	margin-top: 15px;
+}
+#sidebar > ul > li > a, #sidebar > ul > li > ul.sub > li {
+	width: 100%;
+}
+#sidebar > ul > li > ul.sub > li > a {
+	background: transparent !important;
+}
+#sidebar > ul > li > ul.sub > li > a:hover {
+/*background: #4A8BC2 !important ;*/
+}
+/* sidebar */
+#sidebar {
+	margin: 0px !important;
+}
+/* sidebar collabler */
+#sidebar .btn-navbar.collapsed .arrow {
+	display: none;
+}
+#sidebar .btn-navbar .arrow {
+	position: absolute;
+	right: 35px;
+	width: 0;
+	height: 0;
+	top: 48px;
+	border-bottom: 15px solid #282e36;
+	border-left: 15px solid transparent;
+	border-right: 15px solid transparent;
+}
+/*---------*/
 
-    /*sidebar*/
-
-    #sidebar {
-        height: auto;
-        overflow: hidden;
-        position: absolute;
-        width: 100%;
-        z-index: 1001;
-    }
-
-
-    /* body container */
-    #main-content {
-        margin: 0px!important;
-        position: none !important;
-    }
-
-    #sidebar > ul > li > a > span {
-        line-height: 35px;
-    }
-
-    #sidebar > ul > li {
-        margin: 0 10px 5px 10px;
-    }
-    #sidebar > ul > li > a {
-        height:35px;
-        line-height:35px;
-        padding: 0 10px;
-        text-align: left;
-    }
-    #sidebar > ul > li > a i{
-        /*display: none !important;*/
-    }
-
-    .mail-info, .mail-info:hover {
-        display: none !important;
-    }
-    #sidebar ul > li > a .arrow, #sidebar > ul > li > a .arrow.open {
-        margin-right: 10px;
-        margin-top: 15px;
-    }
-
-    #sidebar ul > li.active > a .arrow, #sidebar ul > li > a:hover .arrow, #sidebar ul > li > a:focus .arrow,
-    #sidebar > ul > li.active > a .arrow.open, #sidebar > ul > li > a:hover .arrow.open, #sidebar > ul > li > a:focus .arrow.open{
-        margin-top: 15px;
-    }
-
-    #sidebar > ul > li > a, #sidebar > ul > li > ul.sub > li {
-        width: 100%;
-    }
-    #sidebar > ul > li > ul.sub > li > a {
-        background: transparent !important ;
-    }
-    #sidebar > ul > li > ul.sub > li > a:hover {
-        /*background: #4A8BC2 !important ;*/
-    }
-
-
-    /* sidebar */
-    #sidebar {
-        margin: 0px !important;
-    }
-
-    /* sidebar collabler */
-    #sidebar .btn-navbar.collapsed .arrow {
-        display: none;
-    }
-
-    #sidebar .btn-navbar .arrow {
-        position: absolute;
-        right: 35px;
-        width: 0;
-        height: 0;
-        top:48px;
-        border-bottom: 15px solid #282e36;
-        border-left: 15px solid transparent;
-        border-right: 15px solid transparent;
-    }
-
-
-    /*---------*/
-
-    .btn {
-        margin-bottom: 5px;
-    }
-
-
-    .inbox-wrapper aside {
-        display: block;
-    }
-
-    .inbox-wrapper .inbox-left , .inbox-wrapper .inbox-right{
-        width: 100% ;
-    }
-
-    /* full calendar fix */
-    .fc-header-right {
-        left:25px;
-        position: absolute;
-    }
-
-    .fc-header-left .fc-button {
-        margin: 0px !important;
-        top: -10px !important;
-    }
-
-    .fc-header-right .fc-button {
-        margin: 0px !important;
-        top: -50px !important;
-    }
-
-    .fc-state-active, .fc-state-active .fc-button-inner, .fc-state-hover, .fc-state-hover .fc-button-inner {
-        background: none !important;
-        color: #FFFFFF !important;
-    }
-
-    .fc-state-default, .fc-state-default .fc-button-inner {
-        background: none !important;
-    }
-
-    .fc-button {
-        border: none !important;
-        margin-right: 2px;
-    }
-
-    .fc-view {
-        top: 0px !important;
-    }
-
-    .fc-button .fc-button-inner {
-        margin: 0px !important;
-        padding: 2px !important;
-        border: none !important;
-        margin-right: 2px !important;
-        background-color: #fafafa !important;
-        background-image: -moz-linear-gradient(top, #fafafa, #efefef) !important;
-        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fafafa), to(#efefef)) !important;
-        background-image: -webkit-linear-gradient(top, #fafafa, #efefef) !important;
-        background-image: -o-linear-gradient(top, #fafafa, #efefef) !important;
-        background-image: linear-gradient(to bottom, #fafafa, #efefef) !important;
-        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fafafa', endColorstr='#efefef', GradientType=0) !important;
-        -webkit-box-shadow: 0 1px 0px rgba(255, 255, 255, .8) !important;
-        -moz-box-shadow: 0 1px 0px rgba(255, 255, 255, .8) !important;
-        box-shadow: 0 1px 0px rgba(255, 255, 255, .8) !important;
-        -webkit-border-radius: 3px !important;
-        -moz-border-radius: 3px !important;
-        border-radius: 3px !important;
-        color: #646464 !important;
-        border: 1px solid #ddd !important;
-        text-shadow: 0 1px 0px rgba(255, 255, 255, .6) !important;
-        text-align: center;
-    }
-
-    .fc-button.fc-state-disabled .fc-button-inner {
-        color: #bcbbbb !important;
-    }
-
-    .fc-button.fc-state-active .fc-button-inner {
-        background-color: #e5e4e4 !important;
-        background-image: -moz-linear-gradient(top, #e5e4e4, #dddcdc) !important;
-        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e5e4e4), to(#dddcdc)) !important;
-        background-image: -webkit-linear-gradient(top, #e5e4e4, #dddcdc) !important;
-        background-image: -o-linear-gradient(top, #e5e4e4, #dddcdc) !important;
-        background-image: linear-gradient(to bottom, #e5e4e4, #dddcdc) !important;
-        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#e5e4e4', endColorstr='#dddcdc', GradientType=0) !important;
-    }
-
-    .fc-content {
-        margin-top: 50px;
-    }
-
-    .fc-header-title h2 {
-        line-height: 40px !important;
-        font-size: 12px !important;
-    }
-
-    .fc-header {
-        margin-bottom:0px !important;
-    }
-
-    /*--*/
+.btn {
+	margin-bottom: 5px;
+}
+.inbox-wrapper aside {
+	display: block;
+}
+.inbox-wrapper .inbox-left, .inbox-wrapper .inbox-right {
+	width: 100%;
+}
+/* full calendar fix */
+.fc-header-right {
+	left: 25px;
+	position: absolute;
+}
+.fc-header-left .fc-button {
+	margin: 0px !important;
+	top: -10px !important;
+}
+.fc-header-right .fc-button {
+	margin: 0px !important;
+	top: -50px !important;
+}
+.fc-state-active, .fc-state-active .fc-button-inner, .fc-state-hover, .fc-state-hover .fc-button-inner {
+	background: none !important;
+	color: #FFFFFF !important;
+}
+.fc-state-default, .fc-state-default .fc-button-inner {
+	background: none !important;
+}
+.fc-button {
+	border: none !important;
+	margin-right: 2px;
+}
+.fc-view {
+	top: 0px !important;
+}
+.fc-button .fc-button-inner {
+	margin: 0px !important;
+	padding: 2px !important;
+	border: none !important;
+	margin-right: 2px !important;
+	background-color: #fafafa !important;
+	background-image: -moz-linear-gradient(top, #fafafa, #efefef) !important;
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fafafa), to(#efefef)) !important;
+	background-image: -webkit-linear-gradient(top, #fafafa, #efefef) !important;
+	background-image: -o-linear-gradient(top, #fafafa, #efefef) !important;
+	background-image: linear-gradient(to bottom, #fafafa, #efefef) !important;
+ filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fafafa', endColorstr='#efefef', GradientType=0) !important;
+	-webkit-box-shadow: 0 1px 0px rgba(255, 255, 255, .8) !important;
+	-moz-box-shadow: 0 1px 0px rgba(255, 255, 255, .8) !important;
+	box-shadow: 0 1px 0px rgba(255, 255, 255, .8) !important;
+	-webkit-border-radius: 3px !important;
+	-moz-border-radius: 3px !important;
+	border-radius: 3px !important;
+	color: #646464 !important;
+	border: 1px solid #ddd !important;
+	text-shadow: 0 1px 0px rgba(255, 255, 255, .6) !important;
+	text-align: center;
+}
+.fc-button.fc-state-disabled .fc-button-inner {
+	color: #bcbbbb !important;
+}
+.fc-button.fc-state-active .fc-button-inner {
+	background-color: #e5e4e4 !important;
+	background-image: -moz-linear-gradient(top, #e5e4e4, #dddcdc) !important;
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e5e4e4), to(#dddcdc)) !important;
+	background-image: -webkit-linear-gradient(top, #e5e4e4, #dddcdc) !important;
+	background-image: -o-linear-gradient(top, #e5e4e4, #dddcdc) !important;
+	background-image: linear-gradient(to bottom, #e5e4e4, #dddcdc) !important;
+ filter: progid:dximagetransform.microsoft.gradient(startColorstr='#e5e4e4', endColorstr='#dddcdc', GradientType=0) !important;
+}
+.fc-content {
+	margin-top: 50px;
+}
+.fc-header-title h2 {
+	line-height: 40px !important;
+	font-size: 12px !important;
+}
+.fc-header {
+	margin-bottom: 0px !important;
+}
+/*--*/
 
     /*.chart-position {*/
         /*margin-top: 0px;*/
     /*}*/
 
-    .timeline-desk .album a {
-        margin-bottom: 5px;
-        margin-right: 4px;
-    }
-
-    .stepy-titles li {
-        margin: 10px 3px;
-    }
-
-    .mail-option .btn {
-        margin-bottom: 0;
-    }
-
-
-
+.timeline-desk .album a {
+	margin-bottom: 5px;
+	margin-right: 4px;
 }
-
+.stepy-titles li {
+	margin: 10px 3px;
+}
+.mail-option .btn {
+	margin-bottom: 0;
+}
+}
 
 @media (max-width: 740px) {
-    #task_notificatoin_bar,#mail_notificatoin_bar,#alert_notificatoin_bar{
-        display: none;
-    }
-    .copyright {
-        bottom:0px;
-    }
-    .ladda-button{
-        width:100%;
-        display:block;
-    }
-    .dataTables_length label,.dataTables_filter label,.dataTables_filter {
-        width:100%;
-    }
-    .f-w-9 {
-        width: 88%;
-        vertical-align: super;
-    }
-    .modal-dialog {
-   
-    margin: 50% 0 0 0;
+#task_notificatoin_bar, #mail_notificatoin_bar, #alert_notificatoin_bar {
+	display: none;
 }
-    .add-on{
-        margin-top:-44px;
-    }
+.copyright {
+	bottom: 0px !important;
+    position: absolute;
+    width: 100%;
+}
+.ladda-button {
+	width: 100%;
+	display: block;
+}
+.dataTables_length label, .dataTables_filter label, .dataTables_filter {
+	width: 100%;
+}
+.f-w-9 {
+	width: 88%;
+	vertical-align: super;
+}
+.modal-dialog {
+	margin: 50% 0 0 0;
+}
+.add-on {
+	margin-top: -44px;
+}
 }
 
 @media (max-width: 480px) {
-    .m-b-sm,.cd-as {
-    width:93%;
+.m-b-sm, .cd-as {
+	width: 93%;
 }
-    .m-r {
-        width: 87%;
-    }
-    .notification-row,.task_notificatoin_bar, .search-row,.knob-charts, .dont-show , .inbox-head .sr-input, .inbox-head .sr-btn{
-        display: none;
-    }
-
-    .inbox-wrapper aside {
-        display: block;
-    }
-
-    .inbox-wrapper .inbox-left , .inbox-wrapper .inbox-right{
-        width: 100% ;
-    }
-
-    #top_menu .nav > li, ul.top-menu > li {
-        float: right;
-    }
-    .hidden-phone {
-        display: none !important;
-    }
-
-    .dataTables_filter {
-        float: left;
-    }
-
-    .dataTables_info {
-        margin-bottom: 10px;
-    }
-
-    .mail-option .btn {
-        margin-bottom: 0;
-    }
-
-    .mail-option .inbox-pagination {
-        margin-top: 10px;
-        float: left;
-    }
-
-    .chart-position {
-       margin-top: 0px;
-     }
-    .hbox>aside, .hbox>section {
-    padding-top: 0px !important;
-}
-     
-}
-@media (min-width: 320px) and (max-width: 479px) {
-    .open, .open body {
-        height: 100%;
-        overflow:auto;
-    }
 .m-r {
-    width: 81%;
+	width: 87%;
+}
+.notification-row, .task_notificatoin_bar, .search-row, .knob-charts, .dont-show, .inbox-head .sr-input, .inbox-head .sr-btn {
+	display: none;
+}
+.inbox-wrapper aside {
+	display: block;
+}
+.inbox-wrapper .inbox-left, .inbox-wrapper .inbox-right {
+	width: 100%;
+}
+#top_menu .nav > li, ul.top-menu > li {
+	float: right;
+}
+.hidden-phone {
+	display: none !important;
+}
+.dataTables_filter {
+	float: left;
+}
+.dataTables_info {
+	margin-bottom: 10px;
+}
+.mail-option .btn {
+	margin-bottom: 0;
+}
+.mail-option .inbox-pagination {
+	margin-top: 10px;
+	float: left;
+}
+.chart-position {
+	margin-top: 0px;
+}
+.hbox>aside, .hbox>section {
+	padding-top: 0px !important;
+}
+}
+
+@media (min-width: 320px) and (max-width: 479px) {
+.open, .open body {
+	height: 100%;
+	overflow: auto;
+}
+.m-r {
+	width: 81%;
 }
 .m-b-sm, .cd-as {
-    width: 89%;
+	width: 89%;
 }
-.scroll-horrizontal{
-        width: 100%;
-    height: 100%;
-    overflow-y: hidden;
-    margin-bottom:20px;
-    overflow-x: hidden;
+.scroll-horrizontal {
+	width: 100%;
+	height: 100%;
+	overflow-y: hidden;
+	margin-bottom: 20px;
+	overflow-x: hidden;
 }
-.table-bordered td a{
-    text-align: left !important;
-    font-size: 10px !important;
-    padding: 0px;
+.table-bordered td a {
+	text-align: left !important;
+	font-size: 10px !important;
+	padding: 0px;
 }
 }
+
 @media (max-width:320px) {
-    .login-social-link a {
-        padding: 15px 17px !important;
-    }
-
-    .notification-row, .search, .dont-show, .inbox-head .sr-input, .inbox-head .sr-btn {
-        display: none;
-    }
-
-    .inbox-wrapper aside {
-        display: block ;
-    }
-
-    .inbox-wrapper .inbox-left , .inbox-wrapper .inbox-right{
-        width: 100% ;
-    }
-
-    #top_menu .nav > li, ul.top-menu > li {
-        float: right;
-    }
-
-    .hidden-phone {
-        display: none !important;
-    }
-
-    .dataTables_filter {
-        float: left;
-    }
-
-    .dataTables_info {
-        margin-bottom: 10px;
-    }
-
-    .mail-option .btn {
-        margin-bottom: 0;
-    }
-
-    .mail-option .inbox-pagination {
-        margin-top: 10px;
-        float: left;
-    }
-
-    .chart-position {
-        margin-top: 0px;
-    }
-    .f-w-9 {
-    width: 81%;
-    vertical-align: super;
+.login-social-link a {
+	padding: 15px 17px !important;
 }
-
-
+.notification-row, .search, .dont-show, .inbox-head .sr-input, .inbox-head .sr-btn {
+	display: none;
 }
-
-
-
-
+.inbox-wrapper aside {
+	display: block;
+}
+.inbox-wrapper .inbox-left, .inbox-wrapper .inbox-right {
+	width: 100%;
+}
+#top_menu .nav > li, ul.top-menu > li {
+	float: right;
+}
+.hidden-phone {
+	display: none !important;
+}
+.dataTables_filter {
+	float: left;
+}
+.dataTables_info {
+	margin-bottom: 10px;
+}
+.mail-option .btn {
+	margin-bottom: 0;
+}
+.mail-option .inbox-pagination {
+	margin-top: 10px;
+	float: left;
+}
+.chart-position {
+	margin-top: 0px;
+}
+.f-w-9 {
+	width: 81%;
+	vertical-align: super;
+}
+}
