Menu design changed.

--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
@@ -18,15 +18,15 @@
     <div class="clearfix"></div>
 
     <div class="bdr marB-md pad-sm clearfix m-b-md">
-        <div class="col-md-3">
-            <div class="row">
-                <select data-bind="options: $root.Leadstatus ,optionsText: 'Name', optionsValue: 'Id',value:SelectedSearchLeadStatus, optionsCaption:'Select Lead Status'" class="form-control"></select>
-            </div>
+        <div class="width-25 f-width">
+
+            <select data-bind="options: $root.Leadstatus ,optionsText: 'Name', optionsValue: 'Id',value:SelectedSearchLeadStatus, optionsCaption:'Select Lead Status'" class="form-control"></select>
+
         </div>
-        <div class="col-md-4">
+        <div class="width-25 f-width">
             <select data-bind="options: $root.Leadsource ,optionsText: 'Name', optionsValue: 'Id',value:SelectedSearchLeadSource, optionsCaption:'Select LeadSource'" class="form-control"></select>
         </div>
-        <div class="col-md-4 ">
+        <div class="width-25 f-width">
             <select data-bind="options: $root.Assignto ,optionsText: 'Name', optionsValue: 'Id',value:SelectedSearchAssignedTo, optionsCaption:'Assigned To'" class="form-control"></select>
         </div>
         <div class="pull-right f-width">
