--- a/Source/CRMLite.UI/Content/css/propznet-style.css
+++ b/Source/CRMLite.UI/Content/css/propznet-style.css
@@ -1235,6 +1235,11 @@ rect {
 	padding: 10px;
 	border-bottom: none;
 }
+.width-25 {
+    width: 29.30%;
+    margin-right: 1%;
+    display: inline-block;
+}
 hr {
 	margin-top: 20px;
 	margin-bottom: 20px;
